@@ -876,6 +876,7 @@ List of values:
     </function>
 
     <!-- label -->
+
     <function>
       <name>element</name>
       <new_element>1</new_element>
@@ -909,6 +910,53 @@ List of values:
 	  <name>widthmm</name>
 	  <field>widthmm</field>
 	  <type>to_mm</type>
+	</member>
+      </parameter>
+    </function>
+
+    <!-- focusable_label -->
+
+    <function>
+      <name>element</name>
+      <new_element>1</new_element>
+
+      <condition>
+	<exists>focusable_label</exists>
+      </condition>
+
+      <invoke>create_focusable_label</invoke>
+
+      <object>factory</object>
+
+      <parameter>
+	<type>compiler.to_text_param</type>
+	<name>focusable_label</name>
+      </parameter>
+
+      <parameter>
+	<name>config</name>
+	<object>focusable_label_config</object>
+	<member_name>options</member_name>
+
+	<member>
+	  <name>alignment</name>
+	  <field>alignment</field>
+	  <type>to_halign</type>
+	</member>
+
+	<member>
+	  <name>widthmm</name>
+	  <field>widthmm</field>
+	  <type>to_mm</type>
+	</member>
+
+	<member>
+	  <name>focus_border</name>
+	  <field>focus_border</field>
+	  <type>single_value</type>
+	  <lookup>
+	    <function>lookup_appearance&lt;const_focus_border_appearance&gt;</function>
+	  </lookup>
 	</member>
       </parameter>
     </function>
